--- a/content/redis-api.html.md.erb
+++ b/content/redis-api.html.md.erb
@@ -86,19 +86,19 @@ The following  parameters can be passed to configure the service instance:
   <dt><code>gemfire_for_redis_port: N</code></dl>
   <dd><code>N</code> is a port number (default: <code>6379</code>).<br>Specifies the port number where the VMware GemFire server listens for Redis commands.</dd>
 
-  <dt><code>gemfire_for_redis_use_default_region_config: S</code></dt>
-  <dd><code>S</code> is either <code>true</code> or <code>false</code> (default: true).<br>
+  <dt><code>gemfire_for_redis_use_default_region_config: B</code></dt>
+  <dd><code>B</code> is a Boolean (default: `true`).<br>
 Specifies whether to use the default configuration for the GemFire for Redis Apps region. If set to false, the VMware GemFire for Redis Apps service will not be enabled and the server will not accept Redis commands until a region with the configured region name is manually created.</dd>
 </dl>
 
 
-* `gemfire_for_redis_port: N`: Where `N` is a port number (default: `6379`).
+* **`gemfire_for_redis_port: N`**: Where `N` is a port number (default: `6379`).
 Specifies the port number where the VMware GemFire server listens for Redis commands.
 
-* `gemfire_for_redis_use_default_region_config: S`: Where `S` is either `true` or `false` (default: true).
+* **`gemfire_for_redis_use_default_region_config: B`**: Where `B` is a Boolean (default: `true`).
 Specifies whether to use the default configuration for the GemFire for Redis Apps region. If set to false, the VMware GemFire for Redis Apps service will not be enabled and the server will not accept Redis commands until a region with the configured region name is manually created.
 
-* `gemfire_for_redis_region_name: S`: Where `S` is a string (default: "GEMFIRE_FOR_REDIS").
+* **`gemfire_for_redis_region_name: S`**: Where `S` is a string (default: "GEMFIRE_FOR_REDIS").
 Specifies the name of the GemFire for Redis Apps region.
 
 * `gemfire_for_redis_maxmemory_policy: S`: Where `S` a string. Valid values are "noeviction" and "allkeys-lru" (default: "noeviction").
