GEMDOCS-203: update release notes

--- a/content/product-snapshot.html.md.erb
+++ b/content/product-snapshot.html.md.erb
@@ -24,6 +24,53 @@ The following tables provide version and version-support information about <%=va
 
 Tables in this section are product snapshots for all of the v1.14 patch releases.
 
+### <a id="v-1-14-8"></a>Version 1.14.8
+
+<table class="nice">
+    <th>Element</th>
+    <th>Details</th>
+    <tr>
+        <td>Version</td>
+        <td>1.14.8</td>
+    </tr>
+    <tr>
+        <td>Release date</td>
+        <td>April 27, 2023</td>
+    </tr>
+    <tr>
+        <td>Software component version</td>
+        <td><%=vars.component_product%> v9.15.5</td>
+    </tr>
+    <tr>
+        <td>Compatible <%=vars.app_runtime_full%> versions</td>
+        <td>v3.0 (partial), v2.13 (partial), v2.12, v2.11, v2.10, 2.9, 2.8, 2.7</td>
+    </tr>
+    <tr>
+        <td>Compatible <%=vars.ops_manager%> versions</td>
+        <td>v3.0, v2.10</td>
+    </tr>
+    <tr>
+        <td>IaaS support</td>
+        <td>AWS, Azure, GCP, OpenStack, vSphere</td>
+    </tr>
+    <tr>
+        <td>IPsec support</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <td>Required BOSH stemcell version (Pivotal stemcell)</td>
+        <td>Ubuntu Xenial v621.488 or a more recent version</td>
+    </tr>
+    <tr>
+        <td>JDK shipped with VMware GemFire</td>
+        <td>1.8.0_342</td>
+    </tr>
+    <tr>
+        <td>Minimum Java buildpack version required for apps</td>
+        <td>v4.46 or a more recent version</td>
+    </tr>
+</table>
+
 ### <a id="v-1-14-7"></a>Version 1.14.7
 
 <table class="nice">
