--- a/content/release-notes.html.md.erb
+++ b/content/release-notes.html.md.erb
@@ -26,7 +26,7 @@ Features included in this release:
 
 - Support for Redis configuration options on service instances of <%=vars.product_full%>. For more information about these options, see:
 
-    - [](redis-api.html#starting-redis-api)
+    - [Start a Service Instance with GemFire for Redis Apps](redis-api.html#starting-redis-api) in _Using the VMware GemFire for Redis Apps Add-on_.
     - <em>--J=-Dgemfire-for-redis-notify-keyspace-events</em> in [Configuring VMware GemFire for Redis Apps](https://docs.vmware.com/en/VMware-GemFire-for-Redis-Apps/1.1/gf-for-redis-apps/configuration.html) in the VMware GemFire for Redis Apps product documentation
 
 - This version of <%=vars.product_full%> runs GemFire 9.15.5.
